--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,105 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Wintech Technologies</title>
   <style>
-    body {
-      font-family: 'Poppins', sans-serif;
-      background: linear-gradient(to right, #0d47a1, #42a5f5);
-      color: white;
-      margin: 0;
-      padding: 0;
-    }
-
-    header {
-      text-align: center;
-      padding: 40px 20px;
-      background: rgba(0, 0, 0, 0.2);
-    }
-
-    header h1 {
-      font-size: 2.5em;
-      margin-bottom: 10px;
-    }
-
-    header p {
-      font-size: 1.2em;
-    }
-
-    section {
-      padding: 30px;
-      max-width: 900px;
-      margin: 0 auto;
-      background: rgba(255, 255, 255, 0.1);
-      border-radius: 15px;
-      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
-      margin-bottom: 40px;
-    }
-
-    h2 {
-      text-align: center;
-      margin-bottom: 20px;
-      color: #ffeb3b;
-    }
-
-    ul {
-      list-style: none;
-      padding: 0;
-      text-align: center;
-    }
-
-    ul li {
-      margin: 10px 0;
-      font-size: 1.1em;
-    }
-
-    form {
-      display: flex;
-      flex-direction: column;
-      gap: 15px;
-    }
-
-    label {
-      font-weight: bold;
-    }
-
-    input, textarea, select {
-      padding: 10px;
-      border-radius: 8px;
-      border: none;
-      outline: none;
-      font-size: 1em;
-    }
-
-    button {
-      background-color: #ffeb3b;
-      color: #000;
-      padding: 12px;
-      border: none;
-      border-radius: 10px;
-      font-size: 1.1em;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-    }
-
-    button:hover {
-      background-color: #fff176;
-    }
-
-    footer {
-      text-align: center;
-      padding: 20px;
-      font-size: 1em;
-      background: rgba(0, 0, 0, 0.3);
-    }
-
-    a {
-      color: #ffeb3b;
-      text-decoration: none;
-      font-weight: bold;
-    }
-
-    a:hover {
-      text-decoration: underline;
-    }
+    body { font-family: Poppins, sans-serif; background: linear-gradient(to right,#0d47a1,#42a5f5); color: white; margin: 0; padding: 0; }
+    header { text-align:center; padding:20px; background:rgba(0,0,0,0.2); }
+    form { display:flex; flex-direction:column; gap:12px; padding:20px; max-width:500px; margin:20px auto; background:rgba(255,255,255,0.1); border-radius:10px; }
+    input, textarea, select { padding:10px; border-radius:8px; border:none; outline:none; font-size:1em; }
+    button { background-color:#ffeb3b; color:#000; padding:12px; border:none; border-radius:10px; cursor:pointer; }
+    .modal-backdrop { position:fixed; inset:0; display:none; align-items:center; justify-content:center; background:rgba(0,0,0,0.6); z-index:9999; }
+    .modal { background:white; color:#111; padding:20px; border-radius:12px; text-align:center; max-width:400px; }
+    .btn { background:#ffeb3b; border:none; padding:10px 16px; border-radius:8px; cursor:pointer; }
   </style>
 </head>
 <body>
@@ -112,53 +22,57 @@
     <p>Smart IT Solutions for Modern Businesses</p>
   </header>
 
-  <section>
-    <h2>Our Services</h2>
-    <ul>
-      <li>🖨️ Printer Servicing & Maintenance</li>
-      <li>💻 PC Repairs & Upgrades</li>
-      <li>🌐 Website Development</li>
-      <li>📱 Mobile App Development</li>
-    </ul>
-  </section>
+  <form id="serviceForm">
+    <label>Full Name:</label>
+    <input name="Name" required>
+    <label>Email:</label>
+    <input type="email" name="Email" required>
+    <label>Phone:</label>
+    <input name="Phone" required>
+    <label>Service:</label>
+    <select name="Service">
+      <option>Printer Servicing</option>
+      <option>PC Repairs</option>
+      <option>Website Development</option>
+      <option>App Development</option>
+    </select>
+    <label>Details:</label>
+    <textarea name="Details" required></textarea>
+    <button type="submit">Send Request</button>
+  </form>
 
-  <section>
-    <h2>Request a Service</h2>
-    <form action="mailto:Wintechtechnologies707@gmail.com" method="post" enctype="text/plain">
-      <label for="name">Full Name:</label>
-      <input type="text" id="name" name="Name" placeholder="Enter your name" required>
+  <div class="modal-backdrop" id="modalBackdrop"></div>
 
-      <label for="email">Email Address:</label>
-      <input type="email" id="email" name="Email" placeholder="Enter your email" required>
+  <script>
+    const form = document.getElementById('serviceForm');
+    const modalBackdrop = document.getElementById('modalBackdrop');
 
-      <label for="phone">Phone Number:</label>
-      <input type="tel" id="phone" name="Phone" placeholder="Enter your phone number" required>
+    form.addEventListener('submit', async (e) => {
+      e.preventDefault();
+      const data = Object.fromEntries(new FormData(form).entries());
+      try {
+        const res = await fetch('/send-request', {
+          method: 'POST',
+          headers: {'Content-Type':'application/json'},
+          body: JSON.stringify(data)
+        });
+        const result = await res.json();
+        if(result.success){
+          showModal("✅ Request Sent","Your request has been submitted successfully.");
+          form.reset();
+        }else{
+          showModal("❌ Error","Something went wrong.");
+        }
+      } catch {
+        showModal("⚠️ Error","Server not reachable.");
+      }
+    });
 
-      <label for="service">Select Service:</label>
-      <select id="service" name="Service">
-        <option>Printer Servicing</option>
-        <option>PC Repairs</option>
-        <option>Website Development</option>
-		<option>Networking</option>
-        <option>App Development</option>
-        <option>Other</option>
-      </select>
-
-      <label for="details">Service Details / Description:</label>
-      <textarea id="details" name="Details" rows="5" placeholder="Describe your issue or request..." required></textarea>
-
-      <button type="submit">Send Request</button>
-    </form>
-  </section>
-
-  <footer>
-    <p>📞 Contact: <strong>083 787 2798</strong></p>
-    <p>📧 Email: <a href="mailto:Wintechtechnologies707@gmail.com">Wintechtechnologies707@gmail.com</a></p>
-    <p>
-      💬 WhatsApp | 
-      <a href="https://www.facebook.com" target="_blank">Facebook</a>
-    </p>
-    <p>&copy; 2025 Wintech Technologies. All rights reserved.</p>
-  </footer>
+    function showModal(title,msg){
+      modalBackdrop.innerHTML = `<div class='modal'><h3>${title}</h3><p>${msg}</p><button class='btn' onclick='hideModal()'>OK</button></div>`;
+      modalBackdrop.style.display='flex';
+    }
+    function hideModal(){ modalBackdrop.style.display='none'; }
+  </script>
 </body>
 </html>
