--- a/index.html
+++ b/index.html
@@ -1,78 +1,139 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Wintech Technologies</title>
   <style>
-    body { font-family: Poppins, sans-serif; background: linear-gradient(to right,#0d47a1,#42a5f5); color: white; margin: 0; padding: 0; }
-    header { text-align:center; padding:20px; background:rgba(0,0,0,0.2); }
-    form { display:flex; flex-direction:column; gap:12px; padding:20px; max-width:500px; margin:20px auto; background:rgba(255,255,255,0.1); border-radius:10px; }
-    input, textarea, select { padding:10px; border-radius:8px; border:none; outline:none; font-size:1em; }
-    button { background-color:#ffeb3b; color:#000; padding:12px; border:none; border-radius:10px; cursor:pointer; }
-    .modal-backdrop { position:fixed; inset:0; display:none; align-items:center; justify-content:center; background:rgba(0,0,0,0.6); z-index:9999; }
-    .modal { background:white; color:#111; padding:20px; border-radius:12px; text-align:center; max-width:400px; }
-    .btn { background:#ffeb3b; border:none; padding:10px 16px; border-radius:8px; cursor:pointer; }
-  </style>
-</head>
-<body>
-  <header>
-    <h1>Wintech Technologies</h1>
-    <p>Smart IT Solutions for Modern Businesses</p>
-  </header>
-
-  <form id="serviceForm">
-    <label>Full Name:</label>
-    <input name="Name" required>
-    <label>Email:</label>
-    <input type="email" name="Email" required>
-    <label>Phone:</label>
-    <input name="Phone" required>
-    <label>Service:</label>
-    <select name="Service">
-      <option>Printer Servicing</option>
-      <option>PC Repairs</option>
-      <option>Website Development</option>
-      <option>App Development</option>
-    </select>
-    <label>Details:</label>
-    <textarea name="Details" required></textarea>
-    <button type="submit">Send Request</button>
-  </form>
-
-  <div class="modal-backdrop" id="modalBackdrop"></div>
-
-  <script>
-    const form = document.getElementById('serviceForm');
-    const modalBackdrop = document.getElementById('modalBackdrop');
-
-    form.addEventListener('submit', async (e) => {
-      e.preventDefault();
-      const data = Object.fromEntries(new FormData(form).entries());
-      try {
-        const res = await fetch('/send-request', {
-          method: 'POST',
-          headers: {'Content-Type':'application/json'},
-          body: JSON.stringify(data)
-        });
-        const result = await res.json();
-        if(result.success){
-          showModal("✅ Request Sent","Your request has been submitted successfully.");
-          form.reset();
-        }else{
-          showModal("❌ Error","Something went wrong.");
-        }
-      } catch {
-        showModal("⚠️ Error","Server not reachable.");
-      }
-    });
-
-    function showModal(title,msg){
-      modalBackdrop.innerHTML = `<div class='modal'><h3>${title}</h3><p>${msg}</p><button class='btn' onclick='hideModal()'>OK</button></div>`;
-      modalBackdrop.style.display='flex';
+    body {
+      font-family: 'Poppins', sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #f9f9f9;
+      color: #222;
+      scroll-behavior: smooth;
     }
-    function hideModal(){ modalBackdrop.style.display='none'; }
-  </script>
-</body>
-</html>
+
+    header {
+      background: linear-gradient(135deg, #0052cc, #00aaff);
+      color: white;
+      text-align: center;
+      padding: 50px 20px;
+    }
+
+    header h1 {
+      margin: 0;
+      font-size: 2.8rem;
+    }
+
+    nav {
+      background: #003366;
+      padding: 10px;
+      text-align: center;
+    }
+
+    nav a {
+      color: white;
+      text-decoration: none;
+      margin: 0 15px;
+      font-weight: bold;
+    }
+
+    nav a:hover {
+      text-decoration: underline;
+    }
+
+    section {
+      padding: 40px 20px;
+      max-width: 1000px;
+      margin: auto;
+    }
+
+    h2 {
+      color: #0052cc;
+      text-align: center;
+      margin-bottom: 20px;
+    }
+
+    .card {
+      background: white;
+      border-radius: 12px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      margin: 20px 0;
+      padding: 20px;
+    }
+
+    footer {
+      background: #003366;
+      color: white;
+      text-align: center;
+      padding: 20px;
+    }
+
+    .btn {
+      display: inline-block;
+      background: #0052cc;
+      color: white;
+      padding: 10px 20px;
+      border-radius: 8px;
+      text-decoration: none;
+      transition: 0.3s;
+    }
+
+    .btn:hover {
+      background: #007bff;
+    }
+
+    .social-buttons {
+      text-align: center;
+      margin-top: 20px;
+    }
+
+    .social-buttons a {
+      display: inline-block;
+      margin: 10px;
+      padding: 12px 20px;
+      border-radius: 8px;
+      text-decoration: none;
+      font-weight: bold;
+      color: white;
+      transition: transform 0.3s;
+    }
+
+    .whatsapp {
+      background-color: #25D366;
+    }
+
+    .facebook {
+      background-color: #1877F2;
+    }
+
+    .social-buttons a:hover {
+      transform: scale(1.05);
+      opacity: 0.9;
+    }
+
+    .modal {
+      display: none;
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0,0,0,0.5);
+      justify-content: center;
+      align-items: center;
+    }
+
+    .modal-content {
+      background: white;
+      padding: 30px;
+      border-radius: 10px;
+      text-align: center;
+      width: 90%;
+      max-width: 400px;
+    }
+
+    .close-btn {
+      background: #0052cc;
+      color: white;
+      border: none;
+      padding: 8px 16px;
