--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -193,10 +194,10 @@
     <h2>Contact Us</h2>
     <div class="card">
       <p>Email: <a href="mailto:service@wintech.co.za">service@wintech.co.za</a></p>
-      <p>Phone / WhatsApp: <a href="https://wa.me/27837872798" target="_blank">+27 83 787 2798</a></p>
+      <p>Phone / WhatsApp: <a href="https://wa.me/27 72 809 1210" target="_blank">+27 72 809 1210</a></p>
 
       <div class="social-buttons">
-        <a href="https://wa.me/27837872798" target="_blank" class="whatsapp">📱 Chat on WhatsApp</a>
+        <a href="https://wa.me/27728091210" target="_blank" class="whatsapp">📱 Chat on WhatsApp</a>
         <a href="https://www.facebook.com/wintechtechnologies" target="_blank" class="facebook">👍 Visit Facebook</a>
       </div>
 
