--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -193,12 +194,12 @@
   <section id="contact">
     <h2>Contact Us</h2>
     <div class="card">
-      <p>Email: <a href="mailto:service@wintech.co.za">service@wintech.co.za</a></p>
+      <p>Email: <a href="mailto:infor@wintechtechnologies.co.za">infor@wintechtechnologies.co.za</a></p>
       <p>Phone / WhatsApp: <a href="https://wa.me/27 72 809 1210" target="_blank">+27 72 809 1210</a></p>
 
       <div class="social-buttons">
         <a href="https://wa.me/27728091210" target="_blank" class="whatsapp">📱 Chat on WhatsApp</a>
-        <a href="https://www.facebook.com/wintechtechnologies" target="_blank" class="facebook">👍 Visit Facebook</a>
+        <a href="https://www.facebook.com/share/1C5GTsFUg4/" target="_blank" class="facebook">Visit Facebook</a>
       </div>
 
       <form id="contactForm">
@@ -217,7 +218,7 @@
   </section>
 
   <footer>
-    <p>&copy; 2025 Wintech Technologies | <a href="mailto:service@wintech.co.za" style="color:white;">service@wintech.co.za</a></p>
+    <p>&copy; 2025 Wintech Technologies | <a href="mailto:infor@wintechtechnologies.co.za" style="color:white;">infor@wintechtechnologies.co.za</a></p>
   </footer>
 
   <div id="successModal" class="modal">
