--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Wintech Technologies</title>
+  <title>Wintech Technology</title>
   <style>
     body {
       font-family: 'Poppins', sans-serif;
@@ -156,7 +156,7 @@
 </head>
 <body>
   <header id="home">
-    <h1>Welcome to Wintech Technologies</h1>
+    <h1>Welcome to Wintech Technology</h1>
     <p>Smart IT Solutions, Repairs, and Web Services for Modern Businesses.</p>
   </header>
 
@@ -184,9 +184,9 @@
   </section>
 
   <section id="about">
-    <h2>About Wintech Technologies</h2>
+    <h2>About Wintech Technology</h2>
     <div class="card">
-      <p>Wintech Technologies is a South African-based IT solutions company providing reliable, affordable, and modern technology services. 
+      <p>Wintech Technology is a South African-based IT solutions company providing reliable, affordable, and modern technology services. 
       Our goal is to deliver innovative tech support — from printers to custom web applications — that keeps your business running efficiently.</p>
     </div>
   </section>
@@ -194,7 +194,7 @@
   <section id="contact">
     <h2>Contact Us</h2>
     <div class="card">
-      <p>Email: <a href="mailto:infor@wintechtechnologies.co.za">infor@wintechtechnologies.co.za</a></p>
+      <p>Email: <a href="mailto:infor@wintechtechnology.co.za">infor@wintechtechnology.co.za</a></p>
       <p>Phone / WhatsApp: <a href="https://wa.me/27 72 809 1210" target="_blank">+27 72 809 1210</a></p>
 
       <div class="social-buttons">
@@ -218,13 +218,13 @@
   </section>
 
   <footer>
-    <p>&copy; 2025 Wintech Technologies | <a href="mailto:infor@wintechtechnologies.co.za" style="color:white;">infor@wintechtechnologies.co.za</a></p>
+    <p>&copy; 2025 Wintech Technology | <a href="mailto:infor@wintechtechnology.co.za" style="color:white;">infor@wintechtechnology.co.za</a></p>
   </footer>
 
   <div id="successModal" class="modal">
     <div class="modal-content">
       <h3>✅ Message Sent Successfully!</h3>
-      <p>Thank you for contacting Wintech Technologies. We’ll respond soon.</p>
+      <p>Thank you for contacting Wintech Technology. We’ll respond soon.</p>
       <button class="close-btn" onclick="closeModal()">Close</button>
     </div>
   </div>
@@ -245,3 +245,4 @@
   </script>
 </body>
 </html>
+
